<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="words"
            type="Models.Variables" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:background="@color/skyBluish"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyBluish"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:orientation="horizontal">

       <androidx.appcompat.widget.SearchView
           android:id="@+id/search_bar"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="20dp"
           android:background="@drawable/searchbar_design"/>

    </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear">

            <TextView
                android:id="@+id/Word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@string/word"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/searchedWord"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/searchedWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@{words.searchedWord}"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/Word"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@id/constraint"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:padding="8dp"
            android:text="@{words.text}"
            android:layout_margin="8dp"
            android:textSize="20sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sound"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="-80dp"
            android:background="@drawable/speaker"
            android:contentDescription="@string/definition" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/bluish"
        android:layout_below="@id/linear2"
        android:layout_margin="10dp"
        android:padding="8dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/meanings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meanings"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/meanings"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/partofSpeech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/partofspeechc"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/speechWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:text="@{words.partOfSpeech}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center|center_vertical"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/definition"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/definedWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center_horizontal|center_vertical"
                    android:maxLines="3"
                    android:text="@{words.definition}"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear4"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/synonyms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/synonyms"
                    android:layout_gravity="center_horizontal|center"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/synonymsWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:layout_gravity="center_horizontal|center"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:text="@{words.synonyms.toString()}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/antonyms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_margin="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/antonyms"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/antonymsWords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:text="@{words.antonyms.toString()}"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>




        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>
